welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:2: error: '=' expected but identifier found.
def move(nbPas:Int, versLAvant:Boolean) move = {
                                        ^Program:12: error: illegal start of simple expression
}
^